refatoração e ínicio do editar.

--- a/deletar.html
+++ b/deletar.html
@@ -7,20 +7,16 @@
     <!-- css -->
     <link rel="stylesheet" href="./public/css/main.css" />
 
-    <title>Produtos</title>
+    <title>Deletar Produto</title>
   </head>
 
   <body>
-    <div class="register-product">
+    <div class="delete-product">
       <label for="idProduct">ID do Produto:</label
       ><input required type="number" id="idProduct" />
-      <label for="product">Nome do Produto:</label
-      ><input required type="text" id="product" />
-      <label for="priceProduct">Preço do Produto:</label
-      ><input required type="number" id="priceProduct" />
     </div>
 
-    <button id="btn-register-enviar">Enviar!</button>
+    <button id="btn-delete-enviar">Deletar</button>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
@@ -29,6 +25,6 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <script src="./public/scripts/cadastarProduto.js"></script>
+    <script src="./public/scripts/deletar.js"></script>
   </body>
 </html>
