--- a/cadastrar.html
+++ b/cadastrar.html
@@ -7,16 +7,20 @@
     <!-- css -->
     <link rel="stylesheet" href="./public/css/main.css" />
 
-    <title>Produtos</title>
+    <title>Cadastrar Produto</title>
   </head>
 
   <body>
-    <div class="delete-product">
+    <div class="register-product">
       <label for="idProduct">ID do Produto:</label
       ><input required type="number" id="idProduct" />
+      <label for="product">Nome do Produto:</label
+      ><input required type="text" id="product" />
+      <label for="priceProduct">Preço do Produto:</label
+      ><input required type="number" id="priceProduct" />
     </div>
 
-    <button id="btn-delete-enviar">Enviar!</button>
+    <button id="btn-register-enviar">Cadastrar</button>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
@@ -25,6 +29,6 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <script src="./public/scripts/deletarProduto.js"></script>
+    <script src="./public/scripts/cadastar.js"></script>
   </body>
 </html>
