--- a/editar.html
+++ b/editar.html
@@ -12,7 +12,7 @@
 
   <body>
     <div class="edit-product">
-      <label for="idProduct">ID do Produto:</label
+      <label id="idProductLabel" for="idProduct">ID do Produto:</label
       ><input required type="number" id="idProduct" />
 
       <div class="esconder">
@@ -24,6 +24,7 @@
     </div>
 
     <button id="btn-edit-enviar">Editar</button>
+    <button id="btn-edit-enviar-aux">Editar</button>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
