--- a/listar.html
+++ b/listar.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- css -->
     <link rel="stylesheet" href="./public/css/main.css" />
 
@@ -11,7 +18,6 @@
   </head>
 
   <body>
-
     <textarea disable></textarea>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
