fix e modificação no textarea.

--- a/listar.html
+++ b/listar.html
@@ -18,7 +18,11 @@
   </head>
 
   <body>
-    <textarea disable></textarea>
+    <header>
+      <h1>Produtos</h1>
+    </header>
+
+    <textarea disabled cols="50" rows="10"></textarea>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
