seta de voltar.

--- a/listar.html
+++ b/listar.html
@@ -18,6 +18,8 @@
   </head>
 
   <body>
+    <img onclick="history.go(-1)" id="img-voltar" src="./public/assets/back.png" width="50" height="50"/>
+
     <header>
       <h1>Produtos</h1>
     </header>
