modificação na estrutura de pastas.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <h1>Produtos</h1>
     </header>
     <div class="links">
-      <a href="./cadastrar.html">Cadastrar</a>
-      <a href="./editar.html">Editar</a>
-      <a href="./listar.html">Listar</a>
-      <a href="./deletar.html">Deletar</a>
+      <a href="./pages/cadastrar.html">Cadastrar</a>
+      <a href="./pages/editar.html">Editar</a>
+      <a href="./pages/listar.html">Listar</a>
+      <a href="./pages/deletar.html">Deletar</a>
     </div>
   </body>
 </html>
