fixes e verify se já existe um doc c/ o mesmo ID.

--- a/pages/cadastrar.html
+++ b/pages/cadastrar.html
@@ -12,13 +12,13 @@
     />
 
     <!-- css -->
-    <link rel="stylesheet" href="./public/css/main.css" />
+    <link rel="stylesheet" href="../public/css/main.css" />
 
     <title>Cadastrar Produto</title>
   </head>
 
   <body>
-    <img onclick="history.go(-1)" id="img-voltar" src="./public/assets/back.png" width="50" height="50"/>
+    <img onclick="history.go(-1)" id="img-voltar" src="../public/assets/back.png" width="50" height="50"/>
 
     <div class="register-product">
       <label for="idProduct">ID do Produto:</label
@@ -38,6 +38,6 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <script src="./public/scripts/cadastrar.js"></script>
+    <script src="../public/scripts/cadastrar.js"></script>
   </body>
 </html>
