--- a/pages/editar.html
+++ b/pages/editar.html
@@ -12,13 +12,13 @@
     />
 
     <!-- css -->
-    <link rel="stylesheet" href="./public/css/main.css" />
+    <link rel="stylesheet" href="../public/css/main.css" />
 
     <title>Editar Produto</title>
   </head>
 
   <body>
-    <img onclick="history.go(-1)" id="img-voltar" src="./public/assets/back.png" width="50" height="50"/>
+    <img onclick="history.go(-1)" id="img-voltar" src="../public/assets/back.png" width="50" height="50"/>
 
     <div class="edit-product">
       <label id="idProductLabel" for="idProduct">ID do Produto:</label
@@ -42,6 +42,6 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <script src="./public/scripts/editar.js"></script>
+    <script src="../public/scripts/editar.js"></script>
   </body>
 </html>
