--- a/pages/listar.html
+++ b/pages/listar.html
@@ -12,13 +12,13 @@
     />
 
     <!-- css -->
-    <link rel="stylesheet" href="./public/css/main.css" />
+    <link rel="stylesheet" href="../public/css/main.css" />
 
     <title>Listar Produtos</title>
   </head>
 
   <body>
-    <img onclick="history.go(-1)" id="img-voltar" src="./public/assets/back.png" width="50" height="50"/>
+    <img onclick="history.go(-1)" id="img-voltar" src="../public/assets/back.png" width="50" height="50"/>
 
     <header>
       <h1>Produtos</h1>
@@ -33,6 +33,6 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
-    <script src="./public/scripts/listar.js"></script>
+    <script src="../public/scripts/listar.js"></script>
   </body>
 </html>
