--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <a href="./pages/editar.html">Editar</a>
       <a href="./pages/listar.html">Listar</a>
       <a href="./pages/deletar.html">Deletar</a>
+      <a href="./pages/buscar.html">Buscar</a>
     </div>
   </body>
 </html>
